# aquacrop

./: .gitignore  404.html  CONTRIBUTING.md  CR and Wr mismatches.docx  MANIFEST.in  Makefile  Note for soil fertility module.txt  README.md  aq_temp.csv  cropParamsConversion_Py-Win.xlsx  fshape_test.m  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  rm_numba_aot_testing.py  settings.ini  setup.cfg  setup.py  soil_fertility_test-Maize.ipynb  soil_fertility_test-Potato-Copy1.ipynb  soil_fertility_test-Potato.ipynb  soil_fertility_test-Wheat.ipynb  testing_local.py  ~$ and Wr mismatches.docx  ~$anges from v6 to v7.docx  ~WRL0003.tmp
.github/workflows/: docs.yml  main.yml  manual_compile.yml  pypi.yml  release.yml  test_docs  test_docs.yml  unittest.yml
AquaCrop_WIN_TEST_DATA/DATA/: A1B.CO2  A2.CO2  Axum.CLI  Axum.ETo  Axum.PLU  Axum.TMP  B1.CO2  B2.CO2  Barley.CRO  BarleyGDD.CRO  Bogota.ETo  Bogota.TMP  Bru76-05.CLI  Bru76-05.ETo  Bru76-05.PLU  Bru76-05.TMP  Brussels.CLI  Brussels.ETo  Brussels.Plu  Brussels.TMP  BrusselsDec.Plu  BrusselsMonth.Plu  Clay.SOL  ClayLoam.SOL  Const15.GWT  Constant2.GWT  Cordoba.CLI  Cordoba.ETo  Cordoba.PLU  Cordoba.TMP  Cotton.CRO  CottonGDD.CRO  DAVIS96-MZ.ETo  DAVIS96-MZ.PLU  DAVIS96-MZ.TMP  Davis.CLI  Davis.ETo  Davis.PLU  Davis.TMP  DryBean.CRO  (+100 more)
aquacrop/: __init__.py  _nbdev.py  classes.py  comparison.py  container.py  core.py  core.py.bak  initialize.py  lars.py  scratch.py  solution.py  solution_aot.cp310-win_amd64.pyd  solution_aot.py  timestep.py
aquacrop/crops/: crop_params.py
aquacrop/data/: CP.st  CP_EC-EARTH[CP,RCP45,2041-2060]WG.st  MaunaLoaCO2.txt  brussels_climate.txt  brussels_future.txt  cambridge_climate.txt  champion_climate.txt  cordaba_climate.txt  cordoba_climate.txt  hyderabad_climate.txt  lincolnshire_climate.txt  norfolk_climate.txt  north_yorks_climate.txt  northumberland_climate.txt  paddyrice_hyderabad_matlab.txt  paddyrice_hyderabad_windows.OUT  potato_matlab.txt  potato_windows.OUT  suffolk_climate.txt  tunis_climate.txt  tunis_test_1_SandyLoam_matlab.txt  tunis_test_1_SandyLoam_windows.OUT  tunis_test_1_matlab.txt  tunis_test_1_windows.OUT  tunis_test_2_long_matlab.txt  tunis_test_2_long_windows.OUT  tunis_test_3_30taw_matlab.txt  tunis_test_3_30taw_windows.OUT  tunis_test_6_matlab.txt  tunis_test_6_windows.OUT  tunis_wheat_gw15_windows.OUT
aquacrop/entities/: clockStruct.py  co2.py  crop.py  crop.py.bak  fieldManagement.py  groundWater.py  initParamVariables.py  initParamVariables.py.bak  inititalWaterContent.py  irrigationManagement.py  modelConstants.py  moistureDepletion.py  output.py  output.py.bak  paramStruct.py  rootZoneWaterContent.py  soil.py  soilProfile.py  temperatureStressCoefficients.py  totalAvailableWater.py  waterEvaporation.py  waterStressCoefficients.py
aquacrop/initialize/: calculate_HIGC.py  calculate_HI_linear.py  compute_crop_calendar.py  compute_crop_calendar.py.bak  compute_variables.py  compute_variables.py.bak  create_soil_profile.py  read_clocks_parameters.py  read_field_managment.py  read_groundwater_table.py  read_irrigation_management.py  read_model_initial_conditions.py  read_model_parameters.py  read_model_parameters.py.bak  read_weather_inputs.py
aquacrop/scripts/: checkIfPackageIsCompiled.py  initiate_library.py  initiate_library.sh
aquacrop/solution/: HIadj_pollination.py  HIadj_post_anthesis.py  HIadj_pre_anthesis.py  HIref_current_day.py  adjust_CCx.py  (+30 more)
core/: index.html
docs/: _config.yml  classes.html  classes.md  comparison.html  comparison.md  core.html  core.md  entities.md  index.html  index.md  initialize.html  initialize.md  lars.html  lars.md  sidebar.json  solution.html  solution.md  timestep.html  timestep.md  utils.md
entities/: index.html
initialize/: index.html  initialize.md
nbs/: 00_core.ipynb  01_initialize.ipynb  02_timestep.ipynb  03_solution.ipynb  04_classes.ipynb  05_comparison.ipynb  06_lars.ipynb  index.ipynb
search/: search_index.json
solution/: index.html  solution.md
tests/: crop_test.ipynb  crop_test.py  custom_crop_testing.ipynb  datetime_tests.ipynb  fshape_r_testing.py  groundwater_testing.py  line_profile.py  pytest_testing.py  scratch.py  test wig field.py  test.py  test_bug.py  test_co2_timeseries.py  test_compile_time.py  test_core.py  test_custom_soil.py  test_groundwater.py  test_groundwater_table.py  test_irrigation.py  test_model_exceptions.py  test_model_not_running.py  test_model_step_finished.py  test_model_step_less_than_1.py  test_model_step_not_finished.py  test_model_till_termination.py  test_off_season.py  test_rootgowth.py  test_speed.py  test_time.py  test_v7.py  testing_local.py  v7_Comparison_exercises.ipynb  v7_wheat_in_tunis.ipynb
timestep/: index.html  timestep.md
tutorials/: AquaCrop_OSPy_Notebook_1.ipynb  AquaCrop_OSPy_Notebook_2.ipynb  AquaCrop_OSPy_Notebook_3.ipynb  AquaCrop_OSPy_Notebook_4.ipynb
utils/: index.html  utils.md
(+55 files in other folders)
