[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "aquacrop-ss"
version = "0.1.2"
description = "A copy of aquacrop model based on version 3.0.7, fixed some deprecated warnings."
authors = ["SongshGeo <songshgeo@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.x"
numba = ">=0.56.0"
pandas = ">=1.3.5"
tqdm = ">=4.64.0"
cffi = "1.16.0"
matplotlib = "~3"
seaborn = "~0"
