[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aquacrop-ss"
version = "3.0.7.dev1"
description = "A copy of aquacrop model based on version 3.0.7, fixed some deprecated warnings."
authors = ["SongshGeo <songshgeo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "aquacrop"}]


[tool.poetry.dependencies]
python = "3.10.x"
numba = ">=0.56.0"
pandas = ">=1.3.5"
tqdm = ">=4.64.0"
cffi = "1.16.0"
matplotlib = "~3"
seaborn = "~0"
