[metadata]
name = aquacrop
version = 2.2
author = Thomas Kelly
author_email = thomas.kelly-2@manchester.ac.uk
description = Soil-Crop-Water model based on AquaCrop-OS.
long_description = file: README.md
long_description_content_type= text/markdown
keywords = aquacrop, aquacropos, aquacrop-ospy, python
url = https://github.com/aquacropos/aquacrop
project_urls =
    Bug Tracker = https://github.com/aquacropos/aquacrop/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft
    Operating System :: POSIX :: Linux
    Natural Language :: English

[options]
install_requires = 
    numba==0.55.0
    numpy>=1.18.0,<1.22.0
    pandas>=1.3.5
    tqdm>=4.64.0
    cffi==1.15.0
setup_requires =
    numba==0.55.0
    numpy>=1.18.0,<1.22.0
    pandas>=1.3.5
    tqdm>=4.64.0
    cffi==1.15.0
include_package_data = True
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    aquacrop.tests*
    test*
    scripts*
    venv*

